<resources>
    <string name="app_name">SpaceX Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mission_details">Mission Details</string>
    <string name="mission_name">Mission Name:-</string>
    <string name="launch_date">Launch Date:-</string>
    <string name="rocket_details">Rocket Details:</string>
    <string name="rocket_name">Rocket Name:-</string>
    <string name="rocket_type">Rocket Type:-</string>
    <string name="payload_details">Payload Details:-</string>
    <string name="manufacturer_name">Manufacturer Name:</string>
    <string name="nationality">Nationality:</string>
    <string name="payload_mass_kg">Payload Mass (kg):</string>
    <string name="payload_mass_lbs">Payload Mass (lbs):</string>
    <string name="payload_type">Payload Type:</string>
    <string name="reused">Reused:</string>
    <string name="uid">UID:</string>
    <string name="launch_site">Launch Site:-</string>
</resources>