<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:padding="10dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintBottom_toBottomOf="@id/tvMissionDetails"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvMissionDetails"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvMissionDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/mission_details"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/missionNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/mission_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMissionDetails" />

        <TextView
            android:id="@+id/tvMissionNameAns"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/missionNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/missionNameTextView"
            app:layout_constraintTop_toTopOf="@id/missionNameTextView" />

        <TextView
            android:id="@+id/launchDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/launch_date"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/missionNameTextView" />

        <TextView
            android:id="@+id/tvLaunchDateAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/launchDateTextView"
            app:layout_constraintStart_toEndOf="@id/launchDateTextView"
            app:layout_constraintTop_toTopOf="@id/launchDateTextView" />

        <TextView
            android:id="@+id/rocketDetailsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/rocket_details"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/launchDateTextView" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvRocketDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rocketDetailsTextView"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/tvRocketName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rocket_name"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvRocketNameAns"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvRocketName"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvRocketType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/rocket_type"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvRocketName" />

                <TextView
                    android:id="@+id/tvRocketTypeAns"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text=""
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/tvRocketType"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvRocketType"
                    app:layout_constraintTop_toTopOf="@id/tvRocketType" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/payloadDetailsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/payload_details"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvRocketDetails" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvPayloadDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payloadDetailsTextView"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/tvManufacturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manufacturer_name"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvManufacturerAns"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text=""
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvManufacturer"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNationality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/nationality"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvManufacturer" />

                <TextView
                    android:id="@+id/tvNationalityAns"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="1"
                    android:text=""
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/tvNationality"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvNationality"
                    app:layout_constraintTop_toTopOf="@id/tvNationality" />

                <TextView
                    android:id="@+id/tvPayloadMassKg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/payload_mass_kg"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvNationality" />

                <TextView
                    android:id="@+id/tvPayloadMassKgAns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text=""
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/tvPayloadMassKg"
                    app:layout_constraintStart_toEndOf="@id/tvPayloadMassKg"
                    app:layout_constraintTop_toTopOf="@id/tvPayloadMassKg" />

                <TextView
                    android:id="@+id/tvPayloadMassLbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/payload_mass_lbs"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPayloadMassKg" />

                <TextView
                    android:id="@+id/tvPayloadMassLbsAns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text=""
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/tvPayloadMassLbs"
                    app:layout_constraintTop_toTopOf="@id/tvPayloadMassLbs" />

                <TextView
                    android:id="@+id/tvPayloadType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/payload_type"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPayloadMassLbs" />

                <TextView
                    android:id="@+id/tvPayloadTypeAns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text=""
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/tvPayloadType"
                    app:layout_constraintTop_toTopOf="@id/tvPayloadType" />

                <TextView
                    android:id="@+id/tvReused"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/reused"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPayloadType" />

                <TextView
                    android:id="@+id/tvReusedAns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text=""
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/tvReused"
                    app:layout_constraintTop_toTopOf="@id/tvReused" />

                <TextView
                    android:id="@+id/tvUid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/uid"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvReused" />

                <TextView
                    android:id="@+id/tvUidAns"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text=""
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/tvUid"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvUid"
                    app:layout_constraintTop_toTopOf="@id/tvUid" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/launchSiteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/launch_site"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvPayloadDetails" />

        <TextView
            android:id="@+id/tvLaunchSiteAns"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/launchSiteTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/launchSiteTextView"
            app:layout_constraintTop_toTopOf="@id/launchSiteTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
